--- a/.tekton/assisted-installer-mce-downstream-konflux-test-pull-request.yaml
+++ b/.tekton/assisted-installer-mce-downstream-konflux-test-pull-request.yaml
@@ -30,7 +30,7 @@ spec:
     value:
     - linux/x86_64
   - name: dockerfile
-    value: Dockerfile.assisted-installer-mce
+    value: Dockerfile.assisted-installer
   - name: path-context
     value: .
   pipelineSpec:
