--- a/.tekton/assisted-installer-mce-downstream-konflux-test-push.yaml
+++ b/.tekton/assisted-installer-mce-downstream-konflux-test-push.yaml
@@ -27,7 +27,7 @@ spec:
     value:
     - linux/x86_64
   - name: dockerfile
-    value: Dockerfile.assisted-installer-mce
+    value: Dockerfile.assisted-installer
   - name: path-context
     value: .
   pipelineSpec:
