--- a/.tekton/assisted-installer-controller-konflux-test-pull-request.yaml
+++ b/.tekton/assisted-installer-controller-konflux-test-pull-request.yaml
@@ -11,7 +11,7 @@ metadata:
       == "konflux-test"
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: assisted-installer-controller-konflux-test
+    appstudio.openshift.io/application: assisted-installer-test
     appstudio.openshift.io/component: assisted-installer-controller-konflux-test
     pipelines.appstudio.openshift.io/type: build
   name: assisted-installer-controller-konflux-test-on-pull-request
@@ -23,7 +23,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/rh-ee-gravid-tenant/assisted-installer-controller-konflux-test/assisted-installer-controller-konflux-test:on-pr-{{revision}}
+    value: quay.io/redhat-user-workloads/rh-ee-gravid-tenant/assisted-installer-test/assisted-installer-controller-konflux-test:on-pr-{{revision}}
   - name: image-expires-after
     value: 5d
   - name: build-platforms
